# ImageProcessing

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  ip  script.sh
doc/: make.bat
doc/source/: conf.py
docs/: Makefile
docs/source/: ch4.rst  ch5.rst  ch6.rst  ch7.rst  index.rst
docs/source/ch5/: CMakeLists.txt  smooth_weigthed.cpp
src/: CMakeLists.txt  ip.cpp  main.cpp
src/gui/: CMakeLists.txt  IPviewer.cpp  IPviewer.hpp  MainWindow.cpp  MainWindow.hpp  imageviewer.cpp  imageviewer.hpp  mainwindow.cpp  mainwindow.hpp
src/image/: CMakeLists.txt  Image.cpp  Image.hpp  coreExtractContour.cpp  coreExtractContour.hpp  coreExtractObject.cpp  coreExtractObject.hpp  coreRemoveNoise.cpp  coreRemoveNoise.hpp  extract_contour.cpp  extract_object.cpp  image.cpp  image.hpp  imageConst.hpp  image_const.hpp  remove_noise.cpp  remove_noise.hpp  sharpening.cpp  sharpening.hpp
src/utils/: CMakeLists.txt  option_parser.cpp  option_parser.hpp
